创建用户实体 完善系统体系

--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,12 @@ target/
 *.iws
 *.iml
 *.ipr
-
+.env
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
 /dist/
+/logs/
 /nbdist/
 /.nb-gradle/
 build/
