--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,3 +68,21 @@ spring.security.filter.order=10
 spring.cache.type=caffeine
 spring.cache.cache-names=userCache,productCache,queryCache,demoCache
 spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
+
+# JWT 配置
+jwt.secret=wanqing-secret-key-for-jwt-token-generation-please-change-in-production-environment
+jwt.expiration=604800000
+jwt.refresh-expiration=2592000000
+jwt.header=Authorization
+jwt.token-prefix=Bearer
+jwt.issuer=wanqing
+
+# 微信小程序配置
+wx.miniapp.app-id=wxc6252c81b0702f2d
+wx.miniapp.app-secret=cc052afea35e8743ac048c8560473b51
+
+oss.endpoint=oss-cn-hangzhou.aliyuncs.com
+oss.accessKeyId=${ALIYUN_ACCESS_KEY_ID}
+oss.accessKeySecret=${ALIYUN_ACCESS_KEY_SECRET}
+oss.bucketName=soul-dcq
+oss.dir=upload/  
