--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,6 +81,11 @@ jwt.issuer=wanqing
 wx.miniapp.app-id=wxc6252c81b0702f2d
 wx.miniapp.app-secret=cc052afea35e8743ac048c8560473b51
 
+# 文件上传配置
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# 阿里云OSS配置
 oss.endpoint=oss-cn-hangzhou.aliyuncs.com
 oss.accessKeyId=${ALIYUN_ACCESS_KEY_ID}
 oss.accessKeySecret=${ALIYUN_ACCESS_KEY_SECRET}
